--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,45 @@
-@import "bootstrap/dist/css/bootstrap.min.css";
+
 
 body{
-    background: white;
+    background:rgb(0, 128, 0);
+}
+.card{
+    position: relative;
+    background-color: white;
+    padding: 50% 5% 30% 5%;
+    margin: 5% 20% 10% 20%;
+    height: 80%;
+    border: solid 2px black;
+}
+#topSuit{
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    font-size: 700%;
+    transform: translate(-10%,-10%);
+   
+}
+#cardNumber{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 1000%;
+    transform: translate(-50%, -50%);
+}
+#bottomSuit{
+    position: absolute;
+    top:70%;
+    left: 75%;
+    font-size: 700%;
+    transform: translate(-75%, -75%);
+    
+    transform: scaleY(-1);
+}
+#myButton{
+    position: absolute;
+    top:95%;
+    left: 20%;
+    font-size: 150%;
+    padding: 1%;
+    border: solid 1px black;
 }
